--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ unbind C-b
 set -g prefix C-t
 set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
-set -g utf8 on
+#set -g utf8 on
 set -sg escape-time 1
 # setw -g aggressive-resize on
 set -g renumber-windows on
@@ -80,7 +80,7 @@ set -g status on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 2
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-justify "centre"
 set -g status-left-length  90
 set -g status-right-length 90
