--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,9 @@
 ## Global ##
 unbind C-b
 set -g prefix C-t
-set -g default-shell /bin/zsh
+set -g default-shell $SHELL
+
+#
 set -g default-terminal "screen-256color"
 #set -g utf8 on
 set -sg escape-time 1
@@ -93,8 +95,7 @@ set -g pane-active-border-fg blue
 set -g pane-active-border-bg blue
 set -g pane-border-fg white
 set -g automatic-rename off
-#set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
-
+set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
 
 ## Edit mode ##
 set -g mode-keys vi
