--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,18 +7,12 @@
 unbind C-b
 set -g prefix C-t
 set -g default-shell $SHELL
-
-#
 set -g default-terminal "screen-256color"
-#set -g utf8 on
 set -sg escape-time 1
-# setw -g aggressive-resize on
 set -g renumber-windows on
-
-# Less stretching to get to the first item.
 set -g base-index 1
 setw -g pane-base-index 1
-# set -g status-position top
+set -g status-position top
 
 # Shut up.
 set -g quiet on
@@ -37,7 +31,6 @@ bind -n C-right next-window
 bind -n C-left  previous-window
 bind -n C-down  select-pane -t :.+
 bind -n C-up    select-pane -t :.-
-
 
 ## Window Controll ##
 bind p          previous-window
@@ -75,7 +68,6 @@ bind C-t        resize-pane -Z
 bind -n C-y     select-pane -t :.+
 bind-key -r C-n swap-pane -D
 bind-key -r C-p swap-pane -U
-
 
 ## Views ##
 set -g status on
@@ -115,8 +107,6 @@ bind S setw synchronize-panes
 ## Import local settings ##
 # source-file ~/.tmux.conf.local
 
-bind D split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}')"
-
 ## Shortcutkey
 bind P send-keys 192.168.
 bind G send-keys "git fetch & git pull" C-m
@@ -126,15 +116,6 @@ bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2
 unbind s
 bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
 
-
 ## Rename
 # Preix $: Rename Session
 # Preix ,: Rename Window
-
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-#  bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-# bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-# bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-# bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
