--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,3 @@
-#
-# tmux settings @rksz
-#
-#######################################
-
 ## Global ##
 unbind C-b
 set -g prefix C-t
@@ -11,30 +6,18 @@ set -g default-terminal "screen-256color"
 set -sg escape-time 1
 set -g renumber-windows on
 set -g base-index 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
 set -g status-position top
-
-# Shut up.
 set -g quiet on
-
-# DVTM style pane selection
-bind -n F1 select-window -t 1
-bind -n F2 select-window -t 2
-bind -n F3 select-window -t 3
-bind -n F4 select-window -t 4
-bind -n F5 select-window -t 5
-bind -n F6 select-window -t 6
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
+bind r source-file ~/.tmux.conf\; display-message "config reloaded"
+unbind s
+bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
 
-## Window & Pane control
+## Window
 bind -n C-right next-window
 bind -n C-left  previous-window
-bind -n C-down  select-pane -t :.+
-bind -n C-up    select-pane -t :.-
-
-## Window Controll ##
 bind p          previous-window
-# bind -n C-up    new-window -n "new"  -c "#{pane_current_path}"
 bind N          new-window  -c "#{pane_current_path}"
 bind Down       kill-window
 bind X          kill-session
@@ -44,8 +27,9 @@ bind -r C-l     resize-pane -R 6
 bind -r C-j     resize-pane -D 6
 bind -r C-k     resize-pane -U 6
 
-## Pane Controll ##
-# bind -n C-down  kill-pane
+## Pane
+bind -n C-down  select-pane -t :.+
+bind -n C-up    select-pane -t :.-
 bind m          kill-pane
 bind o          kill-pane -a -t .
 bind -n S-left  select-pane -L
@@ -58,23 +42,21 @@ bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h -c "#{pane_current_path}"
 bind '"'        split-window -v -c "#{pane_current_path}"
-# bind u          select-layout main-vertical
-bind u          select-layout tiled
+bind u          select-layout main-vertical
 bind e          select-layout even-horizontal
 bind E          select-layout even-vertical
-# bind t          run "tmux last-pane || tmux last-window || tmux new-window"
-bind t          last-window
-bind C-t        resize-pane -Z
+bind C-t        run "tmux last-pane || tmux last-window || tmux new-window"
+bind t          resize-pane -Z
 bind -n C-y     select-pane -t :.+
 bind-key -r C-n swap-pane -D
 bind-key -r C-p swap-pane -U
+bind S setw synchronize-panes
 
-## Views ##
+## Appearances
 set -g status on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 2
-#set -g status-utf8 on
 set -g status-justify "centre"
 set -g status-left-length  90
 set -g status-right-length 90
@@ -89,7 +71,7 @@ set -g pane-border-fg white
 set -g automatic-rename off
 set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
 
-## Edit mode ##
+## Edit
 set -g mode-keys vi
 bind V send-keys "tmux capture-pane -S -2000 && tmux show-buffer | sed '/^$/d' | vim -" C-m
 bind v copy-mode
@@ -99,23 +81,7 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-## Reload settings ##
-bind r source-file ~/.tmux.conf\; display-message "config reloaded"
-bind S setw synchronize-panes
-#bind M set mode-mouse off
-
-## Import local settings ##
-# source-file ~/.tmux.conf.local
-
-## Shortcutkey
+## Shortcut
 bind P send-keys 192.168.
 bind G send-keys "git fetch & git pull" C-m
-#bind C run "tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
 bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/%1-console-$(date '+%Y%m%d%H%M%S').log\""
-
-unbind s
-bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
-
-## Rename
-# Preix $: Rename Session
-# Preix ,: Rename Window
