--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,8 @@ bind '"'        split-window -v -c "#{pane_current_path}"
 bind u          select-layout main-vertical
 bind e          select-layout even-horizontal
 bind E          select-layout even-vertical
-bind C-t        run "tmux last-pane || tmux last-window || tmux new-window"
-bind t          resize-pane -Z
+bind t          run "tmux last-pane || tmux last-window || tmux new-window"
+bind C-t        resize-pane -Z
 bind -n C-y     select-pane -t :.+
 bind-key -r C-n swap-pane -D
 bind-key -r C-p swap-pane -U
