--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,7 +69,8 @@ set -g pane-active-border-fg blue
 set -g pane-active-border-bg blue
 set -g pane-border-fg white
 set -g automatic-rename off
-set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
+#set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
+set -g default-command "reattach-to-user-namespace -l zsh"
 
 ## Edit
 set -g mode-keys vi
