--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,17 +60,18 @@ set -g status-interval 2
 set -g status-justify "centre"
 set -g status-left-length  90
 set -g status-right-length 90
-set -g status-left '#[fg=white,bg=colour0][#S]#[default]'
-set -g status-right '#[fg=white,bg=colour0] [%Y/%m/%d(%a) %H:%M]#[default]'
+set -g status-left '[#S]#[default]'
+set -g status-right '[%Y/%m/%d(%a) %H:%M]#[default]'
 set -g window-status-current-attr bold
-set -g window-status-current-bg white
+set -g window-status-current-bg blue
 set -g window-status-current-fg black
 set -g pane-active-border-fg blue
 set -g pane-active-border-bg blue
 set -g pane-border-fg white
-set -g automatic-rename off
+set -g automatic-rename on
 #set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
-set -g default-command "reattach-to-user-namespace -l zsh"
+#set -g default-command "reattach-to-user-namespace -l zsh"
+set -g default-command "i -l zsh"
 
 ## Edit
 set -g mode-keys vi
