--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -sg escape-time 1
 set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
-set -g status-position top
+set -g status-position bottom
 set -g quiet on
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 bind r source-file ~/.tmux.conf\; display-message "config reloaded"
@@ -54,8 +54,8 @@ bind S setw synchronize-panes
 
 ## Appearances
 set -g status on
-set -g status-bg black
-set -g status-fg white
+#set -g status-bg black
+#set -g status-fg white
 set -g status-interval 2
 set -g status-justify "centre"
 set -g status-left-length  90
@@ -63,12 +63,12 @@ set -g status-right-length 90
 set -g status-left '[#S]#[default]'
 set -g status-right '[%Y/%m/%d(%a) %H:%M]#[default]'
 set -g window-status-current-attr bold
-set -g window-status-current-bg blue
-set -g window-status-current-fg black
+set -g window-status-current-bg red
+#set -g window-status-current-fg white
 set -g pane-active-border-fg blue
 set -g pane-active-border-bg blue
 set -g pane-border-fg white
-set -g automatic-rename on
+set -g automatic-rename off
 #set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
 #set -g default-command "reattach-to-user-namespace -l zsh"
 set -g default-command "i -l zsh"
