--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
   branch = auto
   interactive = auto
   grep = auto
+	ui = true
 [push]
   default = current
   ; default = tracking
@@ -17,6 +18,7 @@
   editor = /usr/local/bin/nvim
 	autocrlf = false
   precomposeunicode = true
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [alias]
   st = status
   sh = show
@@ -86,3 +88,15 @@
 	required = true
 [http]
 	postBuffer = 524288000
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 227
+	frag = magenta bold
+	commit = 227 bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
