--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
 set -g status-position bottom
-set -g quiet on
+#set -g quiet on
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 bind r source-file ~/.tmux.conf\; display-message "config reloaded"
 unbind s
@@ -78,10 +78,10 @@ set -g mode-keys vi
 bind V send-keys "tmux capture-pane -S -2000 && tmux show-buffer | sed '/^$/d' | vim -" C-m
 bind v copy-mode
 bind y paste-buffer
-unbind -t vi-copy Enter
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 ## Shortcut
 bind P send-keys 192.168.
