--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,5 +55,8 @@ set -g automatic-rename off
 set -g mode-keys vi
 bind v copy-mode
 bind y paste-buffer
-unbind -t vi-copy Enter
-bind-key -t vi-copy v begin-selection
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy v begin-selection
+
+bind r source-file ~/.tmux.conf\; display-message "config reloaded"
+set -g status-bg green
