--- a/.gitconfig
+++ b/.gitconfig
@@ -74,6 +74,7 @@
 	trustExitCode = true
 [ghq]
   root = ~/src
+  root = ~/.gvm/pkgsets/go1.9/global/src
 [pager]
   log  = diff-highlight | less
   show = diff-highlight | less
