--- a/.gitconfig
+++ b/.gitconfig
@@ -74,8 +74,7 @@
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [ghq]
-  #root = ~/src
-  root = ~/Documents/src
+  root = ~/src
   root = ~/.gvm/pkgsets/go1.9/global/src
 [pager]
   log  = diff-highlight | less
