--- a/.gitconfig
+++ b/.gitconfig
@@ -105,3 +105,7 @@
 [merge "mergepbx"]
 	name = Xcode project files merger
 	driver = /usr/local/bin/mergepbx %O %A %B
+[init]
+	defaultBranch = main
+[hub]
+	protocol = https
